# lala

./: .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: main.yml
demucs-to-onnx/: htdemucs.onnx
models/: hdemucs_high_musdb_plus.pt
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: hdemucs.pt  htdemucs.onnx  htdemucs_6s.onnx  piano_transcription.pt
src-tauri/src/: audio_io.rs  commands.rs  config.rs  db.rs  demucs_manager.rs  demucs_model.rs  dsp.rs  hdemucs_weights.rs  lib.rs  main.rs  models.rs  processing.rs  script.py  separation.rs  separator.rs  worker.rs
src/components/: app-header.tsx  app-view.tsx  file-uploader.tsx  files-table.tsx  toast.tsx
src/components/views/: about-view.tsx  error-view.tsx  main-view.tsx
src/components/views/main/: file-uploader.tsx  main-view.tsx
src/components/views/main/stages/: separate.tsx  stages.tsx  tanscribe.tsx  upload.tsx
src/utils/: config.ts  events.ts  files.ts  getAppConfig.ts  schema.ts  separation.ts  state.ts  store.ts  types.ts  use-files.ts  utils.tsx
src/utils/hooks/: useAppConfig.ts
