[package]
name = "lala"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "lala_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.15"
rustfft = "6.1"
lazy_static = "1.4.0"
hound = "3.5"
num_cpus = "1.16"
