[package]
name = "lala"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "lala_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tch = { version = "0.14", features = ["download-libtorch"] }
hound = "3.5"
ndarray = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri = { version = "2", features = [] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
env = "1.0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
